# ipfs-chromium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bootstrap/: 00-preflight-check.sh  01-system-packages.sh  02-fetch-chromium.sh  03-configure-ipfs-chromium.sh  README.md  build-profiles.sh
chromium_edits/145.0.7587.4/chrome/browser/: BUILD.gn.patch  about_flags.cc.patch  chrome_browser_main.cc.patch  chrome_content_browser_client.cc.patch  flag-metadata.json.patch  flag_descriptions.h.patch
chromium_edits/145.0.7587.4/chrome/browser/autocomplete/: chrome_autocomplete_scheme_classifier.cc.patch
chromium_edits/145.0.7587.4/chrome/browser/prefs/: BUILD.gn.patch  browser_prefs.cc.patch
chromium_edits/145.0.7587.4/chrome/installer/linux/common/: desktop.template.patch
chromium_edits/145.0.7587.4/chrome/installer/util/: shell_util.cc.patch
cmake/: chromium.py  patch.py
component/: block_http_request.cc  block_http_request.h  cache_requestor.cc  inter_request_state.cc  inter_request_state.h  interceptor.cc  ipfs_url_loader.cc  tor_onion_service.cc  tor_onion_service.h  xyz_domain_patch.cc  xyz_domain_patch.h  xyz_onion.cc  xyz_onion.h  xyz_onion_service.cc  xyz_onion_service.h
doc/: todo.md
